--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-        <p>Find me on GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+        <p>Kya Moore</p>
     </footer>
 </body>
 </html>
