--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-        <p>Kya Moore</p>
+        <p>Find me on GitHub: <a href="https://itsryuken.github.io/" target="_blank">ItsRyuken</a></p>
     </footer>
 </body>
 </html>
